--- a/my-app/src/assets/styles/styles.scss
+++ b/my-app/src/assets/styles/styles.scss
@@ -6,6 +6,7 @@
 @import './layout/header';
 @import './layout/main';
 @import './layout/footer';
+@import './layout/admin';
 
 @import './components/button';
 @import './components/form';
