--- a/my-app/src/assets/styles/layout/_header.scss
+++ b/my-app/src/assets/styles/layout/_header.scss
@@ -17,7 +17,6 @@
                 font-size: 20px;
                 font-style: normal;
                 font-weight: 200;
-                line-height: normal;
                 text-decoration:none;
                 color: $black;
                 &:hover{
@@ -27,7 +26,7 @@
 
             
             .active{
-                font-weight: 700;
+                font-weight: 500;
             }
         }
         .search-input{
@@ -49,16 +48,19 @@
         .user-list{
             display: flex;
             gap:12px;
-            .sign-in{
-                background-color: $primary_color;
-                min-width: 75px;
-                min-height: 41px;
+            // .sign{
+            //     display: flex;
+            //     gap:10px
+            // }
+            .sign{
+                gap:10px;
+                color:$black
+             }
+            .active .sign{
+
+                background-color: $primary_color !important;
                 color: $white;
-            }
-            .sign-up{
-                min-height: 41px;
-                min-width: 75px;
-                border: 1px solid $black;
+                
             }
         }
     }
